--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,24 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
 
+.feature-box {
+  background-color: #fff;
+  border-radius: 3px;
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  transition: transform 0.2s;
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2); }
+  .feature-box__icon {
+    font-size: 6rem;
+    background-image: linear-gradient(to right, #55c57a, #28b485);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    margin-bottom: 0.5rem; }
+  .feature-box:hover {
+    transform: translateY(-1rem) scale(1.03); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -218,22 +236,31 @@ body {
     padding: 2rem;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 6rem; }
+      margin-right: 2rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 6rem) / 2); }
+    width: calc((100% - 2rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - (2 * 6rem)) / 3); }
+    width: calc((100% - (2 * 2rem)) / 3); }
   .row .col-2-of-3 {
-    width: calc( 2 * (100% - (2 * 6rem)) / 3 + 6rem); }
+    width: calc( 2 * (100% - (2 * 2rem)) / 3 + 2rem); }
   .row .col-1-of-4 {
-    width: calc((100% - (3 * 6rem)) / 4); }
+    width: calc((100% - (3 * 2rem)) / 4); }
   .row .col-2-of-4 {
-    width: calc( (100% - (3 * 6rem)) * 2 / 4 + 6rem); }
+    width: calc( (100% - (3 * 2rem)) * 2 / 4 + 2rem); }
   .row .col-3-of-4 {
-    width: calc( (100% - (3 * 6rem)) * 3 / 4 + (2 * 6rem)); }
+    width: calc( (100% - (3 * 2rem)) * 3 / 4 + (2 * 2rem)); }
 
 .section-about {
   width: 100%;
   padding: 25rem 0;
   margin-top: -20vh;
   background-color: #f7f7f7; }
+
+.section-features {
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  padding: 20rem 0;
+  margin-top: -10rem;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
