--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/buttons";
 @import "components/compositions";
+@import "components/feature-box";
 
 @import "layouts/header";
 @import "layouts/grid";
