--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,7 +3,15 @@ $color-primary: #55c57a; // medium green
 $color-primary-light: #7ed56f; // light green
 $color-primary-dark: #28b485; // dark green
 
+$color-secondary-light: #ffb900; 
+$color-secondary-dark: #ff7730; 
+
+$color-tertiary-light: #2998ff; 
+$color-tertiary-dark: #5643fa; 
+
+
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #bbb;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
