--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "base/utils";
 
 @import "components/buttons";
+@import "components/card";
 @import "components/compositions";
 @import "components/feature-box";
 
