--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,10 +7,12 @@
 @import "base/typography";
 @import "base/utils";
 
+@import "components/bg-video";
 @import "components/buttons";
 @import "components/card";
 @import "components/compositions";
 @import "components/feature-box";
+@import "components/story";
 
 @import "layouts/header";
 @import "layouts/grid";
