feat(booking): implemented booking ui

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "components/buttons";
 @import "components/card";
 @import "components/compositions";
+@import "components/form";
 @import "components/feature-box";
 @import "components/story";
 
