feat(footer): implemented footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,8 @@
 @import "components/feature-box";
 @import "components/story";
 
-@import "layouts/header";
+@import "layouts/footer";
 @import "layouts/grid";
+@import "layouts/header";
 
 @import "pages/home";
