feat(popup): pop ui on clicking book now

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/compositions";
 @import "components/form";
 @import "components/feature-box";
+@import "components/popup";
 @import "components/story";
 
 @import "layouts/footer";
