--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -24,4 +24,5 @@ $default-font-size: 1.6rem;
 // WIDTHS
 $grid-width: 114rem;
 $gutter-horizontal: 2rem;
-$gutter-vertical: 10rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
