--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -18,8 +18,16 @@ html {
   @include respond(tab-port) { // upto 900
     font-size: 50%;
   }
+  @include respond(phone) { // upto 600
+    font-size: 40%;
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
