--- a/scss/base/_utils.scss
+++ b/scss/base/_utils.scss
@@ -7,13 +7,25 @@
 }
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+  @include respond(tab-port) {
+    margin-bottom: 6rem !important;
+  }
 }
 .u-margin-top-big {
   margin-top: 8rem !important;
+  @include respond(tab-port) {
+    margin-top: 6rem !important;
+  }
 }
 .u-margin-top-huge {
   margin-top: 10rem !important;
+  @include respond(tab-port) {
+    margin-top: 8rem !important;
+  }
 }
