--- a/scss/components/_compositions.scss
+++ b/scss/components/_compositions.scss
@@ -10,19 +10,37 @@
     transition: all 0.2s;
     outline-offset: 2rem;
 
+    @include respond(tab-port) {
+      position: relative;
+      width: 33.33%;
+      float: left;
+    }
+
     &--p1 {
       top: -1rem;
       left: 0;
+      @include respond(tab-port) {
+        top: 0;
+      }
     }
 
     &--p2 {
       top: 1rem;
       right: 0;
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+        z-index: 10;
+      }
     }
 
     &--p3 {
       top: 10rem;
       left: 20%;
+      @include respond(tab-port) {
+        top: 0;
+        left: 0;
+      }
     }
 
     &:hover {
