--- a/scss/components/_feature-box.scss
+++ b/scss/components/_feature-box.scss
@@ -7,6 +7,10 @@
   transition: transform 0.2s;
   box-shadow: 1rem 1rem 1rem rgba($color-black, 0.2);
 
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
   &__icon {
     font-size: 6rem;
     background-image: linear-gradient(
@@ -18,6 +22,10 @@
     background-clip: text;
     -webkit-background-clip: text;
     margin-bottom: 0.5rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
 
   &:hover {
