--- a/scss/components/_story.scss
+++ b/scss/components/_story.scss
@@ -9,6 +9,13 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include respond(phone) {
+    width: 100%;
+    padding: 3rem;
+    padding-left: 6rem;
+    transform: skewX(0deg);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -21,6 +28,9 @@
     transform: translateX(-4rem) skewX(12deg);
     position: relative;
     backface-visibility: hidden;
+    @include respond(phone) {
+      transform: translateX(-4rem) skewX(0deg);
+    }
   }
 
   &__img {
@@ -31,6 +41,9 @@
 
   &__text {
     transform: skewX(12deg);
+    @include respond(phone) {
+      transform: skewX(0deg);
+    }
   }
 
   &__caption {
