--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -4,10 +4,17 @@
   padding: 10rem 0;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 8rem;
+    @include respond(tab-port) {
+      margin-bottom: 4rem;
+    }
   }
 
   &__logo {
