--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,6 +3,10 @@
   padding: 25rem 0;
   margin-top: -20vh;
   background-color: $color-grey-light-1;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -20,16 +24,26 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-tours {
   padding: 15rem 0;
   background-color: $color-grey-light-1;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-booking {
@@ -40,6 +54,9 @@
     $color-primary,
     $color-primary-dark
   );
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .booking {
@@ -53,10 +70,36 @@
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.3);
-  
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%
+      ),
+      url(../img/nat-10.jpg);
+  }
+
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   height: 50rem;
