--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -322,7 +322,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
-  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+  @media only screen and (max-width: 56.25em) {
     .card {
       height: auto;
       box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -927,7 +927,3 @@ body {
     @media only screen and (max-width: 56.25em) {
       .booking__form {
         width: 100%; } }
-
-::selection {
-  background-color: #55c57a;
-  color: #fff; }
